syntax = "proto3";

package microservice2;

//rpc services
service UserInformation{
  rpc AddUserInformation(UserInfo) returns(AddReply) {}
  rpc GetUserInformation(EmptyRequest) returns(UserInfoReply) {}
}

//requests and replies
message EmptyRequest { }

message Address {
  string city = 1;
  string state = 2;
  string country = 3;
  int64 postal = 4;
}

message Interests {
  string interest = 1;
  int64 priority = 2;
}

message UserInfo{
    Address address = 1;
    repeated Interests interests = 2;
}

message UserInfoReply{
  bool error = 1;
  UserInfo userInfo =2;
}
message AddReply{
  bool error = 1;
  string message = 2;
}
